[gd_scene load_steps=6 format=3 uid="uid://cwjcuojjpkltw"]

[ext_resource type="PackedScene" uid="uid://c1gc76xdtdhy1" path="res://player.tscn" id="1_bp32l"]
[ext_resource type="Script" path="res://survivors_games.gd" id="1_dhv7e"]
[ext_resource type="PackedScene" uid="uid://cvxdlnpn8k2gl" path="res://pine_tree.tscn" id="2_dm7w5"]
[ext_resource type="PackedScene" uid="uid://d3d0k61tif6vm" path="res://counter.tscn" id="4_6cvys"]

[sub_resource type="Curve2D" id="Curve2D_5ycli"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -128.677, -197.256, 0, 0, 0, 0, 2208.46, -209.644, 0, 0, 0, 0, 2185.51, 1131.12, 0, 0, 0, 0, -135.66, 1131.12, 0, 0, 0, 0, -128.677, -187.726, 0, 0, 0, 0, -128.677, -197.256)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_dhv7e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 1.0
offset_right = 1926.0
offset_bottom = 1079.0

[node name="Player" parent="." instance=ExtResource("1_bp32l")]
position = Vector2(946, 574)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-948, -566)
scale = Vector2(1.00251, 1.0494)
curve = SubResource("Curve2D_5ycli")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-128.677, -197.256)
rotation = -0.00530045
scale = Vector2(0.997496, 0.952926)

[node name="PineTree" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(363, 343)

[node name="PineTree2" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(276, 883)

[node name="PineTree3" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(1521, 429)

[node name="PineTree4" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(1384, 440)

[node name="PineTree5" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(1460, 320)

[node name="PineTree6" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(1331, 885)

[node name="PineTree7" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(1754, 651)

[node name="PineTree8" parent="." instance=ExtResource("2_dm7w5")]
position = Vector2(669, 980)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Counter" parent="CanvasLayer2" instance=ExtResource("4_6cvys")]
offset_left = -161.0
offset_top = -87.0
offset_right = -121.0
offset_bottom = -47.0

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
